[package]
name = "clone_box"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["clone", "cast", "trait-object", "dyn", "macro"]
categories = ["accessibility", "rust-patterns"]
description = "Simple convenience macro for casting to parent object-trait by cloning."
repository = "https://github.com/sigurd4/clone_box"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "2.0.48", features = ["full"]}
quote = "1.0.23"